# src/main/kotlin/com/github/bkhablenko/web/controller/PopularToppingController.kt
@@ -1,0 +1,16 @@
+package com.github.bkhablenko.web.controller
+
+import com.github.bkhablenko.service.PopularToppingService
+import org.springframework.web.bind.annotation.GetMapping
+import org.springframework.web.bind.annotation.RequestMapping
+import org.springframework.web.bind.annotation.RestController
+
+@RestController
+@RequestMapping("/api/v1/toppings/popular")
+class PopularToppingController(private val popularToppingService: PopularToppingService) {
+
+    @GetMapping
+    fun getPopularToppings(): Map<String, Int> {
+        return popularToppingService.countDistinctEmailsByTopping()
+    }
+}
